// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders as disabled 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  height: 1.25rem;
  width: 1.25rem;
  position: relative;
  margin-right: 1rem;
  padding: 0.125rem;
  background-clip: content-box;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  border: 1px solid #31373F;
  border-radius: 4px;
  background-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.emotion-0:checked {
  background-color: #0cd664;
}

.emotion-0:disabled {
  border-color: #304854;
  cursor: not-allowed;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #304854;
}

<div
  className="emotion-2"
>
  <input
    aria-label="I agree to the Terms & Conditions"
    className="emotion-0"
    disabled={true}
    id="Checkbox-i-agree-to-the-terms-conditions"
    type="checkbox"
  />
  <label
    className="emotion-1"
    htmlFor="Checkbox-i-agree-to-the-terms-conditions"
  >
    I agree to the Terms & Conditions
  </label>
</div>
`;

exports[`Checkbox renders by default 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  height: 1.25rem;
  width: 1.25rem;
  position: relative;
  margin-right: 1rem;
  padding: 0.125rem;
  background-clip: content-box;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  border: 1px solid #31373F;
  border-radius: 4px;
  background-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.emotion-0:checked {
  background-color: #0cd664;
}

.emotion-0:disabled {
  border-color: #304854;
  cursor: not-allowed;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #8697a2;
}

<div
  className="emotion-2"
>
  <input
    aria-label="I agree to the Terms & Conditions"
    className="emotion-0"
    disabled={false}
    id="Checkbox-i-agree-to-the-terms-conditions"
    type="checkbox"
  />
  <label
    className="emotion-1"
    htmlFor="Checkbox-i-agree-to-the-terms-conditions"
  >
    I agree to the Terms & Conditions
  </label>
</div>
`;

exports[`Checkbox renders with hidden label 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  height: 1.25rem;
  width: 1.25rem;
  position: relative;
  margin-right: 1rem;
  padding: 0.125rem;
  background-clip: content-box;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  border: 1px solid #31373F;
  border-radius: 4px;
  background-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.emotion-0:checked {
  background-color: #0cd664;
}

.emotion-0:disabled {
  border-color: #304854;
  cursor: not-allowed;
}

<div
  className="emotion-1"
>
  <input
    aria-label="I agree to the Terms & Conditions"
    className="emotion-0"
    disabled={false}
    id="Checkbox-i-agree-to-the-terms-conditions"
    type="checkbox"
  />
</div>
`;
